--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "vercel-build" : "libere toi back in vercel"
+    "vercel-build" : "echo hello"
   },
   "author": "",
   "license": "ISC",
